# replace-eijiro-ipa

./: .gitignore  CHANGELOG.md  LICENSE  replace-eijiro-ipa.cabal
app/: Main.hs
