cabal-version:      2.4
name:               replace-eijiro-ipa
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Detsu
maintainer:         36166146+Detsudetsu@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable replace-eijiro-ipa
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0
      , text
      , megaparsec
      , replace-megaparsec
    hs-source-dirs:   app
    default-language: Haskell2010
